--- a/DependencyCheckerApi/DependencyCheckerApi.csproj
+++ b/DependencyCheckerApi/DependencyCheckerApi.csproj
@@ -23,5 +23,7 @@
     <ProjectReference Include="..\DependencyCheckerApiServices\DependencyCheckerApiServices.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="http://json.schemastore.org/lintstagedrc.schema" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
